package org.example.TEMA6.PolimorfismoEj2;

public class Diseñador extends Empleado{

    public Diseñador() {

    }

    @Override
    public void realizarTarea() {
        System.out.println("Creando diseños gráficos y prototipos.");
    }

}
